fixed layout problems on login page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@
 /* Instructor: Tina Ostrander                     */
 
 
+.inline{
+    display: inline-block;
+}
+
 img {
     max-width: 100%;
     max-height: 100%;
